# poetry_project

./: README.md  pyproject.toml  requirements-dev.txt
Delta-iceberg/: pyproject.toml
Delta-iceberg/notebooks/: iceberg_demo.ipynb
Delta-iceberg/src/: spark_setup.py
Delta-spark/: README.md  pyproject.toml
Delta-spark/tests/: crud.ipynb
Delta-spark/tests/delta-table/: part-00000-589061e8-db33-4b94-b99d-a228b725b22f-c000.snappy.parquet  part-00005-6ca76ff2-089b-4337-abc6-9fc4c1e86b8a-c000.snappy.parquet  part-00010-31a6bbc7-82b0-412a-85b8-e721b63a40c0-c000.snappy.parquet  part-00015-bbb78563-7683-4c17-ad1f-f0c985b072d7-c000.snappy.parquet
