[tool.poetry]
name = "iceberg-project"
version = "0.1.0"
description = "Projeto Apache Iceberg com Spark"
authors = ["Seu Nome <seu@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.0"
pyiceberg = "0.4.0"
findspark = "^1.4.0"
jupyterlab = "^4.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"