[project]
name = "projeto-pyspark"
version = "0.1.0"
description = ""
authors = [
    {name = "Yasmin Michels",email = "yamichels@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "delta-spark (>=3.3.0,<4.0.0)",
    "jupyterlab (>=4.4.1,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_pyspark", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
